# iva

./: .cproject  .project  README.md  hand1ProjX.txt  hand1ProjY.txt  hand2ProjX.txt  hand2ProjY.txt  hand2_1ProjX.txt  hand2_1ProjY.txt  hand2_2ProjX.txt  hand2_2ProjY.txt  hand2_3ProjY.txt  hand5ProjX.txt
src/: CImg.h  CMakeLists.txt  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  CommandPoint.cpp  CommandPoint.h  CommandPunctual.cpp  CommandPunctual.h  CommandUnidirectional.cpp  CommandUnidirectional.h  Doxyfile  EasyDefines.cpp  EasyDefines.h  Game.cpp  Game.h  GameTest.cpp  GameTest.h  Hand.cpp  Hand.h  HandProjections.cpp  HandProjections.h  Kinect.cpp  Kinect.h  KinectDevice.cpp  KinectDevice.h  Manager.cpp  Manager.h  ProjectionArray.cpp  ProjectionArray.h  Recognizer.cpp  Recognizer.h  RecognizerCV.cpp  RecognizerCV.h  RecognizerKinect.cpp  RecognizerKinect.h  SignalEmitter.cpp  SignalEmitter.h  SignalListener.cpp  (+12 more)
src/html/: _command_8h-source.html  _command_manager_8h-source.html  _command_point_8h-source.html  _command_punctual_8h-source.html  _command_unidirectional_8h-source.html  _easy_defines_8h-source.html  _game_8h-source.html  _game_test_8h-source.html  _manager_8h-source.html  _recognizer_8h-source.html  _recognizer_c_v_8h-source.html  _signal_emitter_8h-source.html  _signal_listener_8h-source.html  annotated.html  class_mary_1_1_command-members.html  class_mary_1_1_command.html  class_mary_1_1_command_manager-members.html  class_mary_1_1_command_manager.html  class_mary_1_1_game-members.html  class_mary_1_1_game.html  classes.html  (+14 more)
(+47 files in other folders)
